# njsparser

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
examples/: README.md  flight_data.py  next_data.py
njsparser/: __init__.py  api.py  cli.py  parser.py  tools.py  utils.py  web.py
njsparser/parser/: __init__.py  flight_data.py  js.py  manifests.py  next_data.py  types.py  urls.py
src/njsparser/: api.py  cli.py  source.py  tools.py
src/njsparser/parser/: __init__.py  urls.py
test/: __init__.py  app_osint_industries_yAzR27j6CjHLWW3VxUzzi_buildManifest.js  nextjs.org.html  runpod_io_s4xe_TFYlTTFF_bw1HfD4_buildManifest.js  swag.live.html  swag_live_giz3a1H7OUzfxgxRHIdMx_buildManifest.js  test_api.py  test_tools.py  test_utils.py
test/parser/: test_flight_data.py  test_next_data.py  test_urls.py
test/src/: __init__.py  club.fans.html  m.soundcloud.com.html  mintstars.com.html  nextjs_org_4mSOwJptzzPemGzzI8AOo_buildManifest.js  x.com.html
test/test_parser/: test_flight_data.py  test_js.py  test_manifests.py  test_next_data.py  test_types.py  test_urls.py
