[project]
name = "njsparser"
version = "2.13"
description = "A Python NextJS data parser from HTML"
authors = [
    { name = "ae", email = "85891169+novitae@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pythonmonkey (>=1.1.1,<2.0.0); python_version < '4.0'",
    "rich (>=14.0.0,<15.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[project.scripts]
njsparser = "njsparser.cli:app"
njsp = "njsparser.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"